# ams5915

./: .gitlab-ci.yml  AMS5915.cpp  AMS5915.h  CHANGELOG.md  CMakeLists.txt  README.md  keywords.txt  library.properties
examples/: ams5915_example.cc
examples/AMS5915_example/: AMS5915_example.ino
examples/arduino/ams5915_example/: ams5915_example.ino
examples/cmake/: ams5915_example.cc
include/ams5915/: ams5915.h
src/: AMS5915.cpp  ams5915.cpp  ams5915.h
src/ams5915/: ams5915.cc
